# dynamicrouting-face-decoding-loo

./: main.py  pyproject.toml
.codeocean/: app-panel.json  datasets.json  environment.json  resources.json
code/: Untitled.ipynb  decoding_utils.py  run  run_capsule.py  run_consolidation.py  utils.py
environment/: Dockerfile  environment.yml  postInstall
metadata/: metadata.yml
